force-app/main/default/objects/DealerMDU__c/DealerMDU__c.object-meta.xml
<CustomObject>
    <label>DealerMDU</label>
    <nameField>
        <label>DealerMDU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealerMDUs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>