force-app/main/default/objects/DealerMDU__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DealerMDUs</relationshipLabel>
    <relationshipName>DealerMDUs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>