force-app/main/default/objects/DealerMDU__c/fields/Inactive_MDU__c.field-meta.xml
<CustomField>
    <fullName>Inactive_MDU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive MDU</label>
    <type>Checkbox</type>
</CustomField>