force-app/main/default/objects/DealerMDU__c/fields/MDU_Chuzo__c.field-meta.xml
<CustomField>
    <fullName>MDU_Chuzo__c</fullName>
    <label>MDU Chuzo</label>
    <referenceTo>MDU_Chuzo__c</referenceTo>
    <relationshipLabel>DealerMDUs</relationshipLabel>
    <relationshipName>DealerMDUs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>