force-app/main/default/objects/DealerMDU__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF((Start_Date__c &lt;= TODAY()) &amp;&amp; (ISBLANK(End_Date__c) || (End_Date__c &gt; TODAY())),
&apos;Active&apos;,
IF((End_Date__c &lt; TODAY() || Inactive_MDU__c = True),
&apos;Inactive&apos;,
IF(ISBLANK(Start_Date__c) &amp;&amp; ISBLANK(End_Date__c),
&apos;Pending Activation&apos;,
IF(Start_Date__c &gt; TODAY(),
&apos;Pending Activation&apos;,
&apos;Inactive&apos;
))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>