force-app/main/default/objects/DealerMDU__c/validationRules/Cant_Change_Record_If_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_Record_If_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISCHANGED(Status__c)),
Status__c = &apos;Inactive&apos;,
NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Cannot update fields of an inactive DealerMDU.</errorMessage>
</ValidationRule>