force-app/main/default/objects/DealerMDU__c/validationRules/EndDate_Higher_Than_Store.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Higher_Than_Store</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &gt; MDU_Chuzo__r.End_Date__c</errorConditionFormula>
    <errorMessage>Record End Date can&apos;t be higher than MDU End Date.</errorMessage>
</ValidationRule>