force-app/main/default/objects/DealerMDU__c/validationRules/Inactive_Retail_Store.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Retail_Store</fullName>
    <active>true</active>
    <errorConditionFormula>AND(MDU_Chuzo__r.Status__c  = &apos;Inactive&apos;, ISNEW() = True)</errorConditionFormula>
    <errorMessage>Can&apos;t create DealerMDU record if the MDU Status is Inactive</errorMessage>
</ValidationRule>